# DoxAgent

./: .dockerignore  .env.example  .gitignore  .mcp.json  Dashboard State API 契约.md  Dockerfile  Dockerfile.dashboard  README.md  changelog  docker-compose.yml  pyproject.toml
.tmp-codex/: changelog-entry.patch  changelog-staged.txt  check_remote_dashscope.py  check_remote_stocktwits.py  check_remote_stocktwits_state.py  dashboard-deploy-20260703T050221Z.tgz  dashscope_multi_fallback_remote_code.patch  doxagent-dashboard.nginx.conf  make_dashscope_remote_patch.py  patch_remote_dashscope_env.py  patch_remote_text_stocktwits.py  patch_stocktwits_env.py  probe_remote_stocktwits_api.py  probe_remote_stocktwits_collector.py  runtime-scheduler-deploy-20260703T0507Z.tgz  stocktwits_rapidapi_fallback_remote.patch  stocktwits_rapidapi_fallback_remote_code.patch  verify_container_dashscope.py  verify_container_stocktwits_fallback.py
.tmp-smoke/: stage-document2-resolver-timeout.patch
dev_plan/: DEVELOPMENT_PLAN.md  DOCUMENT3_PRD.md  DOXATLAS_TOOL_SCHEMAS.md  EvidenceRef_restructuring.md  FRONTEND_PRD.md  PHASE0_BASELINE.md  PHASE1_CONTRACTS.md  PHASE2_GATEWAY.md  PHASE3_2_REAL_TOOL_MCP_DATA_PLAN.md  PHASE3_BLACKBOARD_SERVICE.md  PHASE4_AGENT_RUNTIME.md  PHASE5_INITIALIZATION_WORKFLOW.md  PHASE6_E2E_SAMPLE.md  PHASE7_STABILITY_AUDIT_RECOVERY.md  PHASE8_FINANCIAL_SERVICES_INDUSTRY_RESEARCH.md  PHASE8_O4_MARKET_TRACE.md  PHASE8_VIBE_ADAPTERS.md  PHASE_3_3_SKILLS_REGISTRY_INJECTION.md  PHASE_3_4_AGENT_RUNTIME_MAF.md  PHASE_3_5_REAL_WORKFLOW.md  PHASE_3_6_GLOBAL_RESEARCH_MODULE_INTEGRATION.md  PHASE_3_7_3_8_O1_A1_A2_REALIZATION.md  POST_MVP_REALIZATION_ROADMAP.md  PRD.md  PROMPT_SKILL_SEPARATION_PLAN.md  Persistent_Runtime_Execution_Acceptance_Audit.md  Persistent_Runtime_Execution_PRD.md  ReAct_Memory_Restructuring.md  ReAct_Node_Config_Matrix.md  WORKFLOW_REVISION_PLAN.md  dashboard_frontend_acceptance_report.md  document3_prompt_and_skill_improve.md  doxatlas_design.md  workflow_memory_restructuring.md  重构计划.md
docs/: DOXATLAS_TOOL_SCHEMAS.md  blackboard-memory-compaction-audit-2026-07-09.md  dashboard-deployment.md  dashboard-mock-api.md  document1-vs-document2-document3-llm-input-audit-2026-07-09.md  document2-vs-document3-llm-input-audit-2026-07-09.md  document3-llm-context-optimization-2026-07-09.md  doxatlas-tools-agent-contract-remediation-plan-2026-06-20.md  evidence-ref-mechanism-audit-2026-07-10.md  langsmith-initialization-loop-audit-2026-06-19.md  monitoring-message-bus.md  react-memory-real-tool-payload-audit-2026-07-11.md  revenue-audit-market-data-verification-2026-07-10.md  revenue-audit.md  runtime-scheduler-api-handoff.md  server-ssh-deployment.md  supabase-egress-root-cause-2026-07-06.md  supabase-egress-root-cause-and-optimization-plan-2026-07-04.md  supabase-sqlite-data-boundary-plan-2026-06-30.md
eval/: blackboard_eval_contract.md  blackboard_eval_records.md  blackboard_hard_gates.yaml  blackboard_rubrics.yaml  export_brief_state.py  resume_blackboard_run_once.py  run_blackboard_eval_once.py  run_document1_document2_smoke.py  run_document2_expectation_units_smoke.py  run_document3_smoke.py  run_runtime_scheduler_mu_e2e.py
exports/: monitoring_media_recent_100.csv
scripts/: debug-viewer.cmd  debug-viewer.ps1  monitoring-bus.cmd  monitoring-bus.ps1  monitoring-viewer.cmd  monitoring-viewer.ps1  stocktwits-crawler.cmd  stocktwits-crawler.ps1  validate_react_memory_real_tools.py
src_upload_tmp/: changelog  real_service.py  settings.py  test_phase23_persistent_runtime_execution.py  test_phase25_runtime_scheduler.py  workers.py
tests/: __init__.py  conftest.py  test_baseline.py  test_dashboard_mock_api.py  test_dashboard_real_audit_api.py  test_dashboard_real_auth.py  test_dashboard_real_backtest_api.py  test_dashboard_real_documents_api.py  test_dashboard_real_message_bus_api.py  test_dashboard_real_overview_api.py  test_dashboard_real_runtime_api.py  test_document12_output_schema_optimization.py  test_document1_node_contract_matrix.py  test_document2_canonical_contracts.py  test_document2_expectation_units_smoke_script.py  test_document2_node_contract_matrix.py  test_document3_schema_deblocking.py  test_evidence_ref_restructuring.py  test_initialization_characterization.py  test_model_usage.py  test_phase10_skills.py  test_phase11_real_tools.py  test_phase11_real_tools_smoke.py  test_phase12_maf_runtime.py  test_phase13_real_workflow.py  test_phase16_react_harness.py  (+29 more)
(+474 files in other folders)
