[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "doxagent"
version = "0.1.0"
description = "Blackboard-centered agent infrastructure for US equity message-side research."
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = "MIT"
dependencies = [
    "agent-framework-core>=1.6,<2",
    "anthropic>=0.71,<1",
    "httpx>=0.28,<1",
    "langsmith>=0.8,<1",
    "openai>=2,<3",
    "pydantic>=2,<3",
    "pydantic-settings>=2,<3",
    "psycopg[binary]>=3.2,<4",
    "python-dotenv>=1.2,<2",
    "websockets>=15,<16",
    "yfinance>=0.2,<0.3",
    "trafilatura>=2,<3",
    "curl-cffi>=0.15,<1",
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.32,<1",
]

[dependency-groups]
dev = [
    "mypy>=1.18,<2",
    "pytest>=9,<10",
    "pytest-asyncio>=1.3,<2",
    "pytest-cov>=7,<8",
    "ruff>=0.14,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/doxagent"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "real_api: tests that call real external free-tier APIs and consume quota",
    "real_db: tests that connect to real Supabase/Postgres persistence",
]

[tool.ruff]
target-version = "py311"
line-length = 100
extend-exclude = [".uv-cache", ".venv", "references"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
packages = ["doxagent"]
strict = true
warn_unreachable = true
warn_unused_ignores = true
